[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/practicepopup_frame.png" type="Texture" id=1]
[ext_resource path="res://fonts/knight-vision-font/KnightVision-p7Ezy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/world/PracticePopup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=3]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 13.0
content_margin_bottom = 0.0
color = Color( 0.909804, 0.886275, 0.886275, 1 )
thickness = 4

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PracticepopupFrame" type="Sprite" parent="CenterContainer"]
position = Vector2( 509, 297 )
scale = Vector2( 0.7, 0.52 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 227.0
margin_top = 61.0
margin_right = 797.0
margin_bottom = 538.0
custom_constants/separation = 10

[node name="Title" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 570.0
margin_bottom = 40.0
rect_min_size = Vector2( 490, 40 )
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][b]Practice Mode"
text = "Practice Mode"

[node name="Description" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 570.0
margin_bottom = 427.0
rect_min_size = Vector2( 570, 377 )
custom_fonts/normal_font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "This is a practice mode for testing and practicing skill usage and strategy learning on each bosses. Here are properties of this mode that player needs to understand before proceeding.

1. Player will be immortal, feel free to practice without concern
2. Game difficulty and environments will be the same with normal mode
3. There'll be no time record for this mode
4. Obtained skills from bosses in the mode will not be saved to use in normal mode
5. Press [img=30x30]res://sprites/controls/icons8-o-key-100.png[/img] to instantly kill and skip the boss"
text = "This is a practice mode for testing and practicing skill usage and strategy learning on each bosses. Here are properties of this mode that player needs to understand before proceeding.

1. Player will be immortal, feel free to practice without concern
2. Game difficulty and environments will be the same with normal mode
3. There'll be no time record for this mode
4. Obtained skills from bosses in the mode will not be saved to use in normal mode
5. Press  to instantly kill and skip the boss"

[node name="ButtonBox" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 437.0
margin_right = 570.0
margin_bottom = 477.0

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ButtonBox"]
margin_left = 180.0
margin_right = 390.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer/ButtonBox/Buttons"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/ButtonBox/Buttons"]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 5 )
text = "Close"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonBox/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonBox/Buttons/Back" to="." method="_on_Back_pressed"]
